Modificação no arquivo index.html - Adição de conteúdo

--- a/index.html
+++ b/index.html
@@ -6,6 +6,30 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <h1>TAG h1</h1>
+    <h2>TAG h2</h2>
+    <h3>TAG h3</h3>
+    <h4>TAG h4</h4>
+    <h5>TAG h5</h5>
+    <h6>TAG h6</h6>
+    <hr/>
+    <p> 
+        <b>b/b = negrito</b> <br />
+        <strong>strong/strong = negrito e semântica</strong> <br />
+        <i>i/i = Italico</i> <br />
+        <em>em/em = Italico e semântica</em> <br />
+        <mark>mark/mark = Realce</mark> <br />
+        <del>del/del = Tachado</del> <br />
+        <small>small/small = Diminuir fonte</small> <br />   
+    </p>
+    <blockquote>
+    <a href="https://www.google.com.br/" title="site do google">Google</a> <br />
+    <a href="Tel: 11 1551155">Entre em contato por telefone</a> <br />
+    <a href="mail@exemplo.com">Entre em contato por email</a> <br />
+    <address>
+        Endereço - Rua teste, n 123, cep 12312300
+    </address>
+
+    </blockquote>
 </body>
 </html>
