containers.html added; index.html modified; changelog.md modified

--- a/index.html
+++ b/index.html
@@ -30,5 +30,6 @@
         Endereço - Rua teste, n 123, cep 12312300
     </address>
     </blockquote>
+    <a href="./containers.html" >Ir para a página Containers.html</a>
 </body>
 </html>
