listas.html added; index.html modified; changelog.md modified

--- a/index.html
+++ b/index.html
@@ -31,5 +31,6 @@
     </address>
     </blockquote>
     <a href="./containers.html" >Ir para a página Containers.html</a>
+    <a href="./listas.html" > Ir para a página de Listas</a>
 </body>
 </html>
