tabelas.html added; index.html modified, listas.html modified, changelog.md modified

--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
         Endereço - Rua teste, n 123, cep 12312300
     </address>
     </blockquote>
-    <a href="./containers.html" >Ir para a página Containers.html</a>
-    <a href="./listas.html" > Ir para a página de Listas</a>
+    <a href="./containers.html" >Ir para a página Containers.html</a><br />
+    <a href="./listas.html" > Ir para a página de Listas</a><br />
+    <a href="./tabelas.html" > Ir para a página de Tabelas</a><br />
 </body>
 </html>
