midia.html added; midia folder added;  index.html modified, changelog.md modified

--- a/index.html
+++ b/index.html
@@ -34,5 +34,6 @@
     <a href="./listas.html" > Ir para a página de Listas</a><br />
     <a href="./tabelas.html" > Ir para a página de Tabelas</a><br />
     <a href="./formulario.html" > Ir para a página de formulario</a><br />
+    <a href="./midia.html" > Ir para a página de midia</a><br />
 </body>
 </html>
